--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
-  "scripts": {},
+  "scripts": {
+    "test": "node test.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
